# sckinetics

./: pyproject.toml  setup.py
src/: pax_global_header
src/sckinetics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sckinetics/sckinetics.egg-info/: PKG-INFO  SOURCES.txt
